--- a/styles/global.css
+++ b/styles/global.css
@@ -52,6 +52,15 @@ td {
     justify-content: space-between;
     align-items: stretch;
     gap: 20px;
+    margin-top: 40px;
+}
+
+.picks > div {
+    color: beige;
+    border-radius: 15px;
+    border: solid;
+    padding: 20px;
+    background-color: #bd4646;
 }
 
 .ranking > * {
